[package]
name = "argus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
ssh2 = "0.9.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
